Add funções que o Joao fez